--- a/popup/choose_theme.html
+++ b/popup/choose_theme.html
@@ -7,15 +7,9 @@
 
   <body>
     <div id="popup-content">
-      <button id="claro">Claro</button>
-      <button id="escuro">Escuro</button>
-      <button id="reset">Reset</button>
+      <button id="ligado">ligado</button>
+      <button id="desligado">desligado</button>
     </div>
-    <div id="error-content" class="hidden">
-      <p>Can't beastify this web page.</p>
-      <p>Try a different page.</p>
-    </div>
-
     <script src="choose_theme.js"></script>
   </body>
 </html>
